# openmoonray---C4D

./: CMakePresets.json  CMakeWindowsPresets.json  CONTRIBUTING.md  GOVERNANCE.md
.github/workflows/: windows-build.yml
building/: README.md
building/windows/: CMakeLists.txt  install_packages.ps1  windows_build.md
c4d/: README.md
c4d/cpp_plugin/: CMakeLists.txt
c4d/cpp_plugin/res/description/: VPmoonray.res
c4d/cpp_plugin/res/strings_en/: VPmoonray.str
c4d/cpp_plugin/source/: VPmoonray.h  hydra_delegate_bridge.cpp  hydra_delegate_bridge.h  main.cpp  moonray_videopost.cpp
c4d/plugins/moonray_renderer/: __init__.py  moonray_renderer.pyp
c4d/plugins/moonray_renderer/modules/: __init__.py  config.py  hydra_bridge.py  hydra_scene_delegate.py  hydra_settings.py  material_mapper.py  moonray_bridge.py  render_executor.py  scene_translator.py
tsc/meetings/2026/: 2026-04-02.md  2026-04-30.md
